[FIX] web: adjust frontend disabled input colors
=== Maintain border consistency of frontend inputs ===
Prior to this commit, `form-select` borders overlapped the background
color, which is not the case with `form-control`.
This is because `form-control` uses the `background-clip` property.
As we're using a semi-transparent border on frontend inputs, this
creates a color issue: when a `form-select` input is disabled, the
border color is darker than that of the `form-control`.
This commit adapts the `background-clip` on `form-select` input to
maintain color consistency between inputs.

=== Make disabled inputs more recognizable ===
Prior to this commit, disabled inputs were not sufficiently distinct
from regular inputs, especially `website_sale` inputs which had a gray
background.

Steps to reproduce:
- Make sure your instance has website_sale_renting installed.
- Go to the Shop page.
- Look for a product with a rental period (eg. Printer).
- Click on Add to cart, this will disable the rental period input.
=> The gray search bar and the disabled input have almost the same style

This commit adapts the style of disabled inputs in the frontend to make
them more recognizable.

task-3702675

X-original-commit: a4ea1d302ae320fd5810afef68938e6022ec317b

--- a/addons/web/static/src/scss/bootstrap_overridden_frontend.scss
+++ b/addons/web/static/src/scss/bootstrap_overridden_frontend.scss
@@ -21,6 +21,7 @@ $min-contrast-ratio: $o-frontend-min-contrast-ratio !default;
 // Body
 
 $body-bg: $white !default; // BS Default
+$body-color: $o-main-text-color !default;
 
 // Components
 //
@@ -59,15 +60,24 @@ $table-color: inherit !default;
 
 // Forms
 
+$input-color: $body-color !default;
+$input-bg: $body-bg !default;
 $input-transition: background-color .05s ease-in-out, border-color .05s ease-in-out, box-shadow .05s ease-in-out !default;
+
+$input-disabled-bg: $gray-200 !default;
+$input-disabled-border-color: rgba($input-color, 0.15) !default;
 
 $form-check-input-border: $border-width solid $gray-400 !default;
 $form-check-input-border-radius: 0 !default;
+$form-select-disabled-color: mix($input-color, $input-bg) !default;
+$form-select-disabled-bg: $input-disabled-bg !default;
+$form-select-disabled-border-color: $input-disabled-border-color !default;
 
 $form-range-track-height: .1rem !default;
 $form-range-thumb-border: $border-width solid $primary !default;
 $form-range-thumb-bg: $body-bg !default;
 $form-range-thumb-active-bg: $primary !default;
+$form-range-thumb-disabled-bg: $input-disabled-bg !default;
 
 // Figures
 
